--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,26 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import HowItWorks from '../components/HowItWorks.astro';
+import App from '../components/App.astro';
+import Stations from '../components/Stations.astro';
+import Pricing from '../components/Pricing.astro';
+import About from '../components/About.astro';
+import FAQ from '../components/FAQ.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Las Bicis - Tu ciudad sobre ruedas">
+	<Header />
+	<main>
+		<Hero />
+		<HowItWorks />
+		<App />
+		<Stations />
+		<Pricing />
+		<About />
+		<FAQ />
+	</main>
+	<Footer />
+</Layout>
