ci: add GitHub Pages deployment workflow and adjust bike showcase padding

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -32,7 +32,7 @@
 	<div class="ribbon-container">
 		<img src="/vectors/ribbon.svg" alt="" class="ribbon-image">
 	</div>
-	<div class="container">
+	<div class="container" id="bike-showcase">
 		<div class="bike-content">
 			<div class="bike-image-container">
 				<img src="/images/bici_completa.webp" alt="Las Bicis" class="bike-image">
@@ -92,6 +92,10 @@
 		color: var(--primary-blue);
 		overflow: hidden;
 		height: 150vh;
+	}
+
+	#bike-showcase {
+		padding: 4rem 0;
 	}
 
 	.gradient-overlay {
